[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bindgen = "0.72.1"
tempfile = "3.27.0"

librist-rs  = { path = "crates/librist-rs" }
librist-sys = { path = "crates/librist-sys" }
rist-rs = { path = "crates/rist-rs" }
rand = "0.10.1"
libc = "0.2"